Angular FE Panel - Initial commit

--- a/src/main/resources/covid19-case-reporting-WEB/src/index.html
+++ b/src/main/resources/covid19-case-reporting-WEB/src/index.html
@@ -26,7 +26,7 @@
       href="./assets/img/apple-icon.png"
     />
     <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
-    <title>Black Dashboard Angular by Creative Tim</title>
+    <title>Ethio Covid19 Case Reporting Panel</title>
     <!--     Fonts and icons     -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
